--- a/adminator3/style.css
+++ b/adminator3/style.css
@@ -1,4 +1,4 @@
-body
+subcat-spacebody
 {
     margin: 0;
     padding: 0;
@@ -128,7 +128,7 @@ body
     clear: both;
 }
 
-.subcat-space
+.subcat-space a
 {
     margin-left: 20px;
 }
