--- a/adminator3/style.css
+++ b/adminator3/style.css
@@ -220,6 +220,14 @@ subcat-spacebody
 .changes-info { color: grey; font-weight: bold; }
 .changes-upraveno { color: #0066CC; font-weight: bold; }
 
+.opravy-homepage table {
+    width: 100%;
+    table-layout: fixed;
+}
+
+.opravy-homepage table td {
+    position: relative;
+}
 
 .opravy-form-nevybrano
 { color: grey; }
