switch to new login form

--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -1,6 +1,9 @@
 {% extends 'templates/app.twig' %}
 
 {% block content %}
+
+	<div class="login-message" >PŘIHLÁŠENÍ</div>
+
     <div class="row">
     	<div class="col-md-6 col-md-offset-3">
     		<div class="panel panel-default">
