--- a/adminator3/resources/views/auth/password/change.twig
+++ b/adminator3/resources/views/auth/password/change.twig
@@ -1,6 +1,8 @@
 {% extends 'templates/app.twig' %}
 
 {% block content %}
+	<div class="login-message" >ZMĚNA HESLA</div>
+
     <div class="row">
     	<div class="col-md-6 col-md-offset-3">
     		<div class="panel panel-default">
