--- a/adminator3/style-board.css
+++ b/adminator3/style-board.css
@@ -10,50 +10,46 @@
 }
 .head-main
 {
-	width: 598px; 
-	height: 27px; 
 	background-color: #7D7642; 
 	border: 1px black solid;
 }
 
 .head-main-napis
 {
-    margin-left: 5px; 
-    padding-top: 5px;
-    text-align: center;
     font-weight: bold;
-    font-family : Verdana CE, Arial;
+    text-align: center;
+    color: #eaead7 !important; 
+    background-color: #5f6132 !important;
 }
 
 .head-menu-main
 {
-    width: 598px; 
-    height: 22px; 
-    background-color: #eaead7; 
+    font-weight: bold;
+    font-family : Verdana CE, Arial;
+    text-align: center;
     border-bottom: 1px solid black;
     border-left: 1px solid black;
     border-right: 1px solid black;
+    background-color: #eaead7; 
 }
 
 .head-menu-polozky
 {
     text-align: center; 
-    float: left; 
-    width: 148px; 
     margin-top: 4px; 
     border-right: 1px solid black;
+    color : #5f6132;
+    background-color: #eaead7; 
 }
 
 .typ-zprav
 {
-    width: 600px; 
     height: 20px; 
     border-bottom: 1px solid #7D7642;
 }
 
 .zprava-main
 {
-    width: 598px; 
     border: 1px solid black; 
     background-color: #eaead7; 
     padding-top: 2px; 
@@ -63,7 +59,6 @@
 
 .writing-main
 {
-    width: 600px; 
     background-color: #eaead7; 
     border-bottom: 1px solid black; 
     border-left: 1px solid black; 
@@ -109,7 +104,6 @@
 
 .table {
     FONT-SIZE: 10px;
-
     font-family : Verdana CE, Arial CE, Verdana, Arial, Helvetica, sans-serif;
     color : #5f6132;
 }
@@ -124,13 +118,24 @@
 	font-weight : bold;
 	color : #7D7642;
 }
+
 .tableheading {
+    text-align: center;
+	font-weight : bold;
+    font-family : Verdana CE, Arial CE, Verdana, Arial, Helvetica, sans-serif;
+
+}
+
+.tableheadingwrite {
 	FONT-SIZE: 11px;
 	font-weight : bold;
 	color : #7D7642;
         font-family : Verdana CE, Arial CE, Verdana, Arial, Helvetica, sans-serif;
-
+    padding-top: 10px;
+    padding-bottom: 10px;
+    height: 40px !important;
 }
+
 .tableheading A {
 	FONT-SIZE: 11px;
 	font-weight : bold;
@@ -161,16 +166,17 @@
     margin-left: 10px;
 
     padding-left: 10px;
-    padding-right: 10px;
+    /* padding-right: 10px; */
 
     padding-top: 1px;
     padding-bottom: 1px;
         
-    background-color: ff6400;
+    background-color: #ff6400 !important;
     color: white;
 }
 
 .board-rss A 
 {
-    color: white;
+    color: white !important;
+    background-color: #ff6400 !important;
 }
