--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -34,7 +34,7 @@ subcat-spacebody
 
 #obsah
 {
-    width: 990px;
+    /* width: 990px; */
     margin: 2px auto;
     border: 1px solid black;
     text-align: left;
