--- a/adminator3/resources/views/templates/app.twig
+++ b/adminator3/resources/views/templates/app.twig
@@ -14,19 +14,17 @@
 
 	<title>Adminator</title>
 
-	<link href="/style-login.css" rel="stylesheet" type="text/css">
+	<link href="/public/css/style-login.css" rel="stylesheet" type="text/css">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<!--
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	-->
 
 </head>
 <body>
 	<div style="text-align: center;" >
 
-		<div class="login"><img alt="logo" src="/img2/logo.png" ></div>
+		<!--
+			<div class="login"><img alt="logo" src="/img2/logo.png" ></div>
+		-->
 		<div class="login"><img alt="logo 2" src="/img2/im-adm10b.jpg" width="400" ></div>
 
 		<div class="container">
