--- a/adminator3/resources/views/templates/app.twig
+++ b/adminator3/resources/views/templates/app.twig
@@ -12,7 +12,7 @@
 	<meta http-equiv="Pragma" content="no-cache" > 
 	<meta http-equiv="Expires" content="-1" >
 
-	<title>Adminator</title>
+	<title>ISP Adminator 3</title>
 
 	<link href="/public/css/style-login.css" rel="stylesheet" type="text/css">
 
