--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -9,7 +9,8 @@
     		<div class="panel panel-default">
     			<div class="panel-heading">Sign In</div>
     			<div class="panel-body">
-    				<form action="{{ path_for('auth.signin') }}" method="post">
+				{# "{{path_for('auth.signin')}}"  #}
+    				<form action="{{ path_for('login') }}" method="post">
     					<div class="form-group{{ errors.email ? ' has-error' : '' }}">
     						<label for="email">Email</label>
     						<input type="email" name="email" id="email" placeholder="you@domain.com" class="form-control" value="{{ old.email }}">
