--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -13,7 +13,7 @@
     				<form action="{{ path_for('login') }}" method="post">
     					<div class="form-group{{ errors.email ? ' has-error' : '' }}">
     						<label for="email">Email</label>
-    						<input type="email" name="email" id="email" placeholder="you@domain.com" class="form-control" value="{{ old.email }}">
+    						<input type="email" name="slimUsername" id="email" placeholder="you@domain.com" class="form-control" value="{{ old.email }}">
                             {% if errors.email %}
                             <span class="hel-block">{{ errors.email | first }}</span>
                             {% endif %}
@@ -21,7 +21,7 @@
 
     					<div class="form-group{{ errors.password ? ' has-error' : '' }}">
     						<label for="password">Password</label>
-    						<input type="password" name="password" id="password" class="form-control">
+    						<input type="password" name="slimPassword" id="password" class="form-control">
                             {% if errors.password %}
                             <span class="hel-block">{{ errors.password | first }}</span>
                             {% endif %}
