--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -5,10 +5,11 @@
 	<div class="login-message" >PŘIHLÁŠENÍ</div>
 
     <div class="row">
-    	<div class="col-md-6 col-md-offset-3">
-    		<div class="panel panel-default">
-    			<div class="panel-heading">Sign In</div>
-    			<div class="panel-body">
+		<div class="col"></div>
+    	<div class="col-6">
+    		<div class="card">
+    			<div class="card-title">Sign In</div>
+    			<div class="card-text">
 				{# "{{path_for('auth.signin')}}"  #}
     				<form action="{{ path_for('login') }}" method="post">
     					<div class="form-group{{ errors.email ? ' has-error' : '' }}">
@@ -26,12 +27,13 @@
                             <span class="hel-block">{{ errors.password | first }}</span>
                             {% endif %}
     					</div>
-						<button type="submit" class="btn btn-default">Sign In</button>
+						<button type="submit" class="btn btn-link">Sign In</button>
 
                         {{ csrf.field | raw }}
     				</form>
     			</div>
     		</div>
     	</div>
+		<div class="col"></div>
     </div>
 {% endblock %}
