--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -7,8 +7,8 @@
     <div class="row">
 		<div class="col"></div>
     	<div class="col-6">
-    		<div class="card">
-    			<div class="card-title">Sign In</div>
+    		<div class="card fw-medium pt-2">
+    			<div class="card-title bg-black bg-opacity-25 pb-2 pt-2">Sign In</div>
     			<div class="card-text">
 				{# "{{path_for('auth.signin')}}"  #}
     				<form action="{{ path_for('login') }}" method="post">
@@ -27,7 +27,7 @@
                             <span class="hel-block">{{ errors.password | first }}</span>
                             {% endif %}
     					</div>
-						<button type="submit" class="btn btn-link">Sign In</button>
+						<button type="submit" class="btn btn-primary">Sign In</button>
 
                         {{ csrf.field | raw }}
     				</form>
