--- a/adminator3/resources/views/templates/partials/flash.twig
+++ b/adminator3/resources/views/templates/partials/flash.twig
@@ -1,12 +1,18 @@
-{% if flash.getMessage('info') %}
-	<div class="alert alert-info">
-		{{ flash.getMessage('info') | first }}
-	</div>
-{% endif %}
+<div class="row">
+	<div class="col"></div>
+	<div class="col-6">
 
-{% if flash.getMessage('error') %}
-	<div class="alert alert-danger">
-		{{ flash.getMessage('error') | first }}
-	</div>
-{% endif %}
+	{% if flash.getMessage('info') %}
+		<div class="alert alert-info">
+			{{ flash.getMessage('info') | first }}
+		</div>
+	{% endif %}
 
+	{% if flash.getMessage('error') %}
+		<div class="alert alert-danger">
+			{{ flash.getMessage('error') | first }}
+		</div>
+	{% endif %}
+	</div>
+	<div class="col"></div>
+</div>
