--- a/adminator3/resources/views/auth/password/change.twig
+++ b/adminator3/resources/views/auth/password/change.twig
@@ -3,11 +3,12 @@
 {% block content %}
 	<div class="login-message" >ZMĚNA HESLA</div>
 
-    <div class="row">
-    	<div class="col-md-6 col-md-offset-3">
-    		<div class="panel panel-default">
-    			<div class="panel-heading">Change Password</div>
-    			<div class="panel-body">
+	<div class="row">
+		<div class="col"></div>
+		<div class="col-6">
+    		<div class="card pt-2">
+    			<div class="card-title bg-black bg-opacity-25 pb-2 pt-2">Change Password</div>
+    			<div class="card-body">
     				<form action="{{ path_for('auth.password.change') }}" method="post">
                         <div class="form-group{{ errors.password_old ? ' has-error' : '' }}">
                             <label for="password_old">Current Password</label>
@@ -23,12 +24,13 @@
                             <span class="hel-block">{{ errors.password | first }}</span>
                             {% endif %}
     					</div>
-						<button type="submit" class="btn btn-default">Change Password</button>
+						<button type="submit" class="btn btn-primary">Change Password</button>
 
                         {{ csrf.field | raw }}
     				</form>
     			</div>
     		</div>
     	</div>
+		<div class="col"></div>
     </div>
 {% endblock %}
