vlastnici2 list layout

--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -301,6 +301,22 @@ subcat-spacebody
     margin-right: 5px;
 }
 
+.vlastnici2-selectors-line
+{
+    font-size: 0.85rem;
+    vertical-align: middle;
+}
+.vlastnici2-selectors-line select
+{
+    font-size: 0.85rem;
+    vertical-align: middle;
+}
+.vlastnici2-selectors-line input
+{
+    font-size: 0.85rem;
+    vertical-align: middle;
+}
+
 .zmeny-ucetni-banner
 {
     padding-top: 10px; 
