--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -300,7 +300,7 @@ subcat-spacebody
     background-color: black; 
 }
 
-.vlastnici-selector-label
+.listing-selector-label
 {
     margin-left: 5px; 
     margin-right: 5px;
