--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -318,6 +318,7 @@ subcat-spacebody
     font-size: 0.85rem !important;
     vertical-align: middle;
 }
+
 .listing-selectors-line select
 {
     font-size: 0.85rem !important;
@@ -326,7 +327,13 @@ subcat-spacebody
 
 .listing-selectors-line input
 {
-    font-size: 0.85rem !important;;
+    font-size: 0.85rem !important;
+    vertical-align: middle;
+}
+
+.listing-selectors-line label
+{
+    font-size: 0.85rem !important;
     vertical-align: middle;
 }
 
@@ -489,6 +496,36 @@ subcat-spacebody
 .print-reg-form-2012-05-customer
 {
     height: 18px;
+}
+
+.objekty-table
+{
+    /* width: 100%;  */
+    /* margin-bottom: 1rem; */
+    /* vertical-align: top;  */
+    font-size: 0.90rem; 
+    /* border-style: solid; 
+    border-width: 0;
+    border-collapse: collapse; */
+    /* border-spacing: 2px; */
+    /* font-family: Verdana CE, Arial CE, Verdana, Arial, Helvetica, sans-serif; */
+}
+
+.objekty-table tbody 
+{
+    display: table-row-group;
+}
+
+.objekty-table tr
+{
+    display: table-row;
+    padding: .5rem .5rem;
+}
+
+.objekty-table td
+{
+    display: table-cell;
+    padding: .5rem .5rem;
 }
 
 .tarify-table
