--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -528,52 +528,46 @@ subcat-spacebody
     padding: .5rem .5rem;
 }
 
-.tarify-table
+.a-common-table
 {
     width: 100%; 
     margin-bottom: 1rem;
-    vertical-align: top; 
-    font-size: 1rem; 
-    /* border-style: solid; 
-    border-width: 0;
-    border-collapse: collapse; */
+    padding-right: 0.5rem;
+    vertical-align: top;
+    font-size: 0.85rem; 
     border-spacing: 2px;
     font-family: Verdana CE, Arial CE, Verdana, Arial, Helvetica, sans-serif;
 }
 
-.tarify-table tbody 
+.a-common-table thead th
 {
-    display: table-row-group;
+    display: table-cell;
+    padding-left: 0.5rem;
 }
 
-.tarify-table tr
+.a-common-table tr
 {
     display: table-row;
     padding: .5rem .5rem;
 }
 
-.tarify-table td
+.a-common-table td
 {
     display: table-cell;
     padding: .5rem .5rem;
 }
 
-.tarify-table tbody tr:nth-child(odd)
+.a-common-table tbody tr:nth-child(odd)
 {
+    color: grey; 
+}
+
+.a-common-table tbody tr:nth-child(even)
+{
+
     border-top-width: 1px;
 }
 
-.tarify-table tbody tr:nth-child(even)
-{
-    color: grey; 
-
-}
-
-.tarify-table thead tr:nth-child(even)
-{
-    color: grey; 
-
-}
 
 .fakturacni-skupiny-table
 {
