--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -568,6 +568,34 @@ subcat-spacebody
     border-top-width: 1px;
 }
 
+.az-main-table
+{
+    width: 100%; 
+    margin-bottom: 1rem;
+    padding-right: 0.5rem;
+    vertical-align: top;
+    font-size: 0.85rem; 
+    border-spacing: 2px;
+    font-family: Verdana CE, Arial CE, Verdana, Arial, Helvetica, sans-serif;
+}
+
+.az-main-table tr
+{
+    display: table-row;
+    padding: .5rem .5rem;
+}
+
+.az-main-table td
+{
+    display: table-cell;
+    padding: .5rem .5rem;
+}
+
+.az-main-table tbody tr
+{
+    border-top-width: 1px;
+}
+
 
 .fakturacni-skupiny-table
 {
