--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -10,8 +10,8 @@
     		<div class="card fw-medium pt-2">
     			<div class="card-title bg-black bg-opacity-25 pb-2 pt-2">Sign In</div>
     			<div class="card-text">
-				{# "{{path_for('auth.signin')}}"  #}
-    				<form action="{{ url_for('login') }}" method="post">
+				{# "{{path_for('auth.signin  #}
+    				<form action="{{ url_for('auth.signin') }}" method="post">
     					<div class="form-group{{ errors.email ? ' has-error' : '' }}">
     						<label for="email">Email</label>
     						<input type="email" name="slimUsername" id="email" placeholder="you@domain.com" class="form-control" value="{{ old.email }}">
