--- a/adminator3/resources/views/auth/password/change.twig
+++ b/adminator3/resources/views/auth/password/change.twig
@@ -26,7 +26,7 @@
     					</div>
 						<button type="submit" class="btn btn-primary">Change Password</button>
 
-                        {{ csrf.field | raw }}
+                        {{ csrf() }}
     				</form>
     			</div>
     		</div>
