--- a/adminator3/resources/views/templates/partials/flash.twig
+++ b/adminator3/resources/views/templates/partials/flash.twig
@@ -2,7 +2,7 @@
 	<div class="col"></div>
 	<div class="col-6">
 
-	{% if flash.getMessage('info') %}
+	{# {% if flash.getMessage('info') %}
 		<div class="alert alert-info">
 			{{ flash.getMessage('info') | first }}
 		</div>
@@ -12,7 +12,7 @@
 		<div class="alert alert-danger">
 			{{ flash.getMessage('error') | first }}
 		</div>
-	{% endif %}
+	{% endif %} #}
 	</div>
 	<div class="col"></div>
 </div>
