--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -13,7 +13,7 @@
     				<form action="{{ url_for('auth.signin') }}" method="post">
     					<div class="form-group">
     						<label for="email">Email</label>
-    						<input type="email" name="slimUsername" id="email" placeholder="you@domain.com" class="form-control" value="">
+    						<input type="email" name="slimUsername" id="email" placeholder="you@domain.com" class="form-control" value="{{ username }}">
                             {# {% if errors.email %}
                             <span class="hel-block">{{ errors.email | first }}</span>
                             {% endif %} #}
