--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -10,26 +10,25 @@
     		<div class="card fw-medium pt-2">
     			<div class="card-title bg-black bg-opacity-25 pb-2 pt-2">Sign In</div>
     			<div class="card-text">
-				{# "{{path_for('auth.signin')}}"  #}
-    				<form action="{{ path_for('login') }}" method="post">
-    					<div class="form-group{{ errors.email ? ' has-error' : '' }}">
+    				<form action="{{ url_for('auth.signin') }}" method="post">
+    					<div class="form-group">
     						<label for="email">Email</label>
-    						<input type="email" name="slimUsername" id="email" placeholder="you@domain.com" class="form-control" value="{{ old.email }}">
-                            {% if errors.email %}
+    						<input type="email" name="slimUsername" id="email" placeholder="you@domain.com" class="form-control" value="{{ username }}">
+                            {# {% if errors.email %}
                             <span class="hel-block">{{ errors.email | first }}</span>
-                            {% endif %}
+                            {% endif %} #}
     					</div>
 
-    					<div class="form-group{{ errors.password ? ' has-error' : '' }}">
+    					<div class="form-group">
     						<label for="password">Password</label>
     						<input type="password" name="slimPassword" id="password" class="form-control">
-                            {% if errors.password %}
+                            {# {% if errors.password %}
                             <span class="hel-block">{{ errors.password | first }}</span>
-                            {% endif %}
+                            {% endif %} #}
     					</div>
 						<button type="submit" class="btn btn-primary">Sign In</button>
 
-                        {{ csrf.field | raw }}
+                        {{ csrf() }}
     				</form>
     			</div>
     		</div>
