--- a/adminator3/resources/views/auth/password/change.twig
+++ b/adminator3/resources/views/auth/password/change.twig
@@ -9,20 +9,20 @@
     		<div class="card pt-2">
     			<div class="card-title bg-black bg-opacity-25 pb-2 pt-2">Change Password</div>
     			<div class="card-body">
-    				<form action="{{ path_for('auth.password.change') }}" method="post">
-                        <div class="form-group{{ errors.password_old ? ' has-error' : '' }}">
+    				<form action="{{ url_for('auth.password.change') }}" method="post">
+                        <div class="form-group">
                             <label for="password_old">Current Password</label>
                             <input type="password" name="password_old" id="password_old" class="form-control">
-                            {% if errors.password_old %}
+                            {# {% if errors.password_old %}
                             <span class="hel-block">{{ errors.password_old | first }}</span>
-                            {% endif %}
+                            {% endif %} #}
                         </div>
-    					<div class="form-group{{ errors.password ? ' has-error' : '' }}">
+    					<div class="form-group">
     						<label for="password">Password</label>
     						<input type="password" name="password" id="password" class="form-control">
-                            {% if errors.password %}
+                            {# {% if errors.password %}
                             <span class="hel-block">{{ errors.password | first }}</span>
-                            {% endif %}
+                            {% endif %} #}
     					</div>
 						<button type="submit" class="btn btn-primary">Change Password</button>
 
