--- a/adminator3/public/css/style-board.css
+++ b/adminator3/public/css/style-board.css
@@ -34,6 +34,7 @@
 
 .head-menu-polozky
 {
+    font-size: 0.85em;
     text-align: center; 
     margin-top: 4px; 
     border-right: 1px solid black;
@@ -113,7 +114,7 @@
 	color : #eaead7;
 }
 .small {
-	FONT-SIZE: 11px;
+	font-size: 11px;
 	font-weight : bold;
 	color : #7D7642;
 }
@@ -165,7 +166,7 @@
     margin-left: 10px;
 
     padding-left: 10px;
-    /* padding-right: 10px; */
+    padding-right: 10px;
 
     padding-top: 1px;
     padding-bottom: 1px;
@@ -176,6 +177,7 @@
 
 .board-rss A 
 {
+    font-size: 0.75em;
     color: white !important;
     background-color: #ff6400 !important;
 }
