--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -29,6 +29,8 @@
 						<button type="submit" class="btn btn-primary">Sign In</button>
 
                         {{ csrf() }}
+
+						<input type="hidden" name="redirect" value="{{ redirect }}">
     				</form>
     			</div>
     		</div>
