--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -169,13 +169,13 @@ subcat-spacebody
 
 .home-main
 {
-    width: 850px;
-    padding-left: 200px;
+    width: 100%;
+    padding-left: 120px;
 }
 
 .home-vypis-useru-napis
 {
-    width: 800px; 
+    width: 80%; 
     margin-left: auto; 
     margin-right: auto; 
     text-align: left;
@@ -190,7 +190,7 @@ subcat-spacebody
 
 .home-vypis-useru-main
 {
-    width: 800px; 
+    width: 80%; 
     margin-left: auto; 
     margin-right: auto; 
     text-align: left; 
