--- a/adminator3/public/css/style-board.css
+++ b/adminator3/public/css/style-board.css
@@ -120,6 +120,7 @@
 }
 
 .tableheading {
+    font-size: 12px;
     text-align: center;
 	font-weight : bold;
     font-family : Verdana CE, Arial CE, Verdana, Arial, Helvetica, sans-serif;
@@ -180,4 +181,10 @@
     font-size: 0.75em;
     color: white !important;
     background-color: #ff6400 !important;
+}
+
+.board-message-body
+{
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
