--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -285,6 +285,11 @@ subcat-spacebody
     font-size: 0.9rem;
 }​
 
+.vlastniciArchiv-table table {
+    border-collapse: separate;
+    border: 1px solid #999;
+    font-size: 0.9rem;
+}​
 
 .listing-selectors-line
 {
