--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -285,7 +285,7 @@ subcat-spacebody
     font-size: 0.9rem;
 }​
 
-.vlastniciArchiv-table table {
+.vlastnici-archiv-table table {
     border-collapse: separate;
     border: 1px solid #999;
     font-size: 0.9rem;
