--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -283,13 +283,13 @@ subcat-spacebody
     border-collapse: separate;
     border: 1px solid #999;
     font-size: 0.9rem;
-}​
+}
 
 .vlastnici-archiv-table table {
     border-collapse: separate;
     border: 1px solid #999;
     font-size: 0.9rem;
-}​
+}
 
 .listing-selectors-line
 {
