--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -285,6 +285,10 @@ subcat-spacebody
     font-size: 0.9rem;
 }
 
+.vlastnici-archiv-table input {
+    font-size: 0.9rem;
+}
+
 .vlastnici-archiv-table table {
     border-collapse: separate;
     border: 1px solid #999;
