--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -285,7 +285,7 @@ subcat-spacebody
     font-size: 0.9rem;
 }
 
-.vlastnici-archiv-button {
+.vlastnici-archiv-button input {
     font-size: 0.85rem !important;
 }
 
