--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -298,6 +298,12 @@ input[type=submit]
     font-size: 0.9rem;
 }
 
+.vlastnici-table table {
+    border-collapse: separate;
+    border: 1px solid #999;
+    font-size: 0.9rem;
+}
+
 .listing-selectors-line
 {
     font-size: 0.85rem !important;
