--- a/adminator3/public/css/style.css
+++ b/adminator3/public/css/style.css
@@ -298,6 +298,19 @@ input[type=submit]
     font-size: 0.9rem;
 }
 
+input[type=button], 
+input[type=submit] 
+.vlastnici-button {
+    border: none;
+    font-size: 0.75rem !important;
+}
+
+.vlastnici-table table {
+    border-collapse: separate;
+    border: 1px solid #999;
+    font-size: 0.9rem;
+}
+
 .listing-selectors-line
 {
     font-size: 0.85rem !important;
