--- a/adminator3/resources/views/templates/app.twig
+++ b/adminator3/resources/views/templates/app.twig
@@ -5,14 +5,14 @@
 	<meta http-equiv="Content-Language" content="cs">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-	<meta http-equiv="Cache-Control" content="must-revalidate, no-cache, post-check=0, pre-check=0" > 
-	<meta http-equiv="Pragma" content="public" > 
-			
-	<meta http-equiv="Cache-Control" content="no-cache" > 
-	<meta http-equiv="Pragma" content="no-cache" > 
+	<meta http-equiv="Cache-Control" content="must-revalidate, no-cache, post-check=0, pre-check=0" >
+	<meta http-equiv="Pragma" content="public" >
+
+	<meta http-equiv="Cache-Control" content="no-cache" >
+	<meta http-equiv="Pragma" content="no-cache" >
 	<meta http-equiv="Expires" content="-1" >
 
-	<title>ISP Adminator 3</title>
+	<title>Adminator3 :: Login</title>
 
 	<link href="/public/css/style-login.css" rel="stylesheet" type="text/css">
 
@@ -35,7 +35,7 @@
 			{% endif %}
 
 			{% block content %}
-				
+
 			{% endblock %}
 
 		</div>
