--- a/adminator3/resources/views/templates/app.twig
+++ b/adminator3/resources/views/templates/app.twig
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="Content-Language" content="cs">
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Language" content="cs">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-	<meta http-equiv="Cache-Control" content="must-revalidate, no-cache, post-check=0, pre-check=0" >
-	<meta http-equiv="Pragma" content="public" >
+    <meta http-equiv="Cache-Control" content="must-revalidate, no-cache, post-check=0, pre-check=0" >
+    <meta http-equiv="Pragma" content="public" >
 
-	<meta http-equiv="Cache-Control" content="no-cache" >
-	<meta http-equiv="Pragma" content="no-cache" >
-	<meta http-equiv="Expires" content="-1" >
+    <meta http-equiv="Cache-Control" content="no-cache" >
+    <meta http-equiv="Pragma" content="no-cache" >
+    <meta http-equiv="Expires" content="-1" >
 
-	<title>Adminator3 :: Login</title>
+    <title>Adminator3 :: Login</title>
 
-	<link href="/public/css/style-login.css" rel="stylesheet" type="text/css">
+    <link href="/public/css/style-login.css" rel="stylesheet" type="text/css">
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.4/dist/bootstrap-table.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.4/dist/bootstrap-table.min.css">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 </head>
 <body>
-	<div style="text-align: center;" >
-		<div class="login"><img alt="logo 2" src="/img2/im-adm10b.jpg" width="400" ></div>
+    <div style="text-align: center;" >
+        <div class="login"><img alt="logo 2" src="/img2/im-adm10b.jpg" width="400" ></div>
 
-		<div class="container">
-			{% if flashEnabled|default == true %}
-				{% include 'templates/partials/flash.twig' %}
-			{% endif %}
+        <div class="container">
+            {% if flashEnabled|default == true %}
+                {{ include('templates/partials/flash.twig') }}
+            {% endif %}
 
-			{% block content %}
+            {% block content %}
 
-			{% endblock %}
+            {% endblock %}
 
-		</div>
-	</div>
+        </div>
+    </div>
 </body>
 </html>
