--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -17,6 +17,7 @@
                             {# {% if errors.email %}
                             <span class="hel-block">{{ errors.email | first }}</span>
                             {% endif %} #}
+
                         </div>
 
                         <div class="form-group">
@@ -25,10 +26,12 @@
                             {# {% if errors.password %}
                             <span class="hel-block">{{ errors.password | first }}</span>
                             {% endif %} #}
+
                         </div>
+
                         <button type="submit" class="btn btn-primary">Sign In</button>
 
-                        {{ csrf() }}
+                        {{ csrf()|ident(12) }}
 
                         <input type="hidden" name="redirect" value="{{ redirect }}">
                     </form>
