--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -31,7 +31,7 @@
 
                         <button type="submit" class="btn btn-primary">Sign In</button>
 
-                        {{ csrf() }}
+                        {{ csrf()|ident(12) }}
 
                         <input type="hidden" name="redirect" value="{{ redirect }}">
                     </form>
