--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -9,7 +9,7 @@
         <div class="col-6">
             <div class="card fw-medium pt-2">
                 <div class="card-title bg-black bg-opacity-25 pb-2 pt-2" id="adminator-signin-title">Sign In</div>
-                <div class="card-text">
+                <div class="card-text" id="adminator-signin-form" >
                     <form action="{{ url_for('auth.signin') }}" method="post">
                         <div class="form-group">
                             <label for="email">Email</label>
