--- a/adminator3/resources/views/auth/signin.twig
+++ b/adminator3/resources/views/auth/signin.twig
@@ -8,8 +8,8 @@
         <div class="col"></div>
         <div class="col-6">
             <div class="card fw-medium pt-2">
-                <div class="card-title bg-black bg-opacity-25 pb-2 pt-2">Sign In</div>
-                <div class="card-text">
+                <div class="card-title bg-black bg-opacity-25 pb-2 pt-2" id="adminator-signin-title">Sign In</div>
+                <div class="card-text" id="adminator-signin-form" >
                     <form action="{{ url_for('auth.signin') }}" method="post">
                         <div class="form-group">
                             <label for="email">Email</label>
@@ -29,7 +29,7 @@
 
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Sign In</button>
+                        <button type="submit" class="btn btn-primary" id="adminator-signin-submit">Sign In</button>
 
                         {{ csrf()|ident(12) }}
 
